This closes #52 : MITM filters don't work the first time.